[package]
name = "deepnano2"
version = "0.1.0"
authors = ["Vlado Boza <bozavlado@gmail.com>"]
edition = "2018"
#build = "build.rs"

[lib]
name = "deepnano2"
crate-type = ["staticlib"]

[build-dependencies]
os_info = { version = "2.0.0", default-features = false }
reqwest = { version = "0.10", features = ["blocking"] }
bzip2 = { version = "0.4" }
tar = "0.4"
cbindgen = { version = "0.14.4"}

[dependencies]
ndarray = { version = "0.13.1", features = ["blas"] }
#intel-mkl-src = { version = "0.4" }
libc = "0.2.29"
kth = "0.1.0"
pyo3 = { version = "0.8.5", features = ["extension-module"] }
fastapprox = {version = "0.3.0"}
numpy = "0.7.0"
statistical = "1.0.0"

[profile.release]
lto=true
codegen-units=1
panic="abort"
